# org.example.filebrowser

./: README.md  meson.build  org.example.filebrowser.yml  package.json
.flatpak/: meson.sh
data/: meson.build  org.example.filebrowser.data.gresource.xml
data/css/: style.css
data/ui/: Video.ui  VideoWidget.ui  WelcomeWidget.ui  Window.ui
src/: Application.js  Video.js  VideoWidget.js  VideoWidget2.js  WelcomeWidget.js  Window.js  main.js  meson.build  org.example.filebrowser.js  org.example.filebrowser.src.gresource.xml
